--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
@@ -1,31 +1,18 @@
 <body title="Dashboard" [ngClass]="currentTheme" class="start">
 
-  <mat-drawer-container>
-
-    <mat-drawer #drawer aria-label="Sidebar" mode="side" role="complementary">
-      <p>Seleziona un genere:</p>
-
-      <mat-radio-group aria-label="radio group category label" role="radiogroup" class="radio-group" [(ngModel)]="selectedOption">
-        <mat-radio-button  role="radio" title="Click for filter" aria-label="filter" *ngFor="let category of categories" [value]="category"  [attr.aria-checked]="isSelected(category) ? 'true' : 'false'">
-          <span class="radio-label">{{category.name}}</span>
-        </mat-radio-button>
-      </mat-radio-group>
-
-      <br>
-
-      <button class="filter" mat-raised-button color="accent" aria-label="filter button" (click)="filterByCategory(selectedOption)">Filtra</button>
-    </mat-drawer>
-
-
-
     <div class="serach-content" [style.background-color]="coloreCard">
       <mat-form-field class="search-field">
         <input matInput placeholder="Select a film" type="text" role="searchbox" aria-label="Search field"  [formControl]="searchControl" />
         <mat-icon matPrefix  aria-hidden="true">search</mat-icon>
       </mat-form-field>
-      <button mat-icon-button color="warn" role="button" aria-label="Filter button by category" title="Filter films by category" (click)="drawer.toggle()" >
-        <mat-icon>filter_list</mat-icon>
-      </button>
+    
+      <mat-form-field>
+        <mat-select aria-label="Filtra per categoria" placeholder="Filtra per categoria">
+          <mat-option *ngFor="let category of categories" [value]="category">
+            {{category.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
 
     <div role="list">
@@ -79,5 +66,4 @@
       </button>
     </div>
 
-  </mat-drawer-container>
 </body>
